# roo_comms

./: BUILD  MODULE.bazel  library.json  library.properties
bazel/patches/: BUILD  nanopb_bazel9.patch
proto/: comms.proto
src/: comms.pb.c  comms.pb.h  esp_now_transport.cpp  esp_now_transport.h  message_queue.h  roo_comms.cpp  roo_comms.h
src/roo_comms/: home_automation.cpp  home_automation.h  pairing.cpp  pairing.h  peer.cpp  peer.h
src/roo_comms/device/: pairable_device.cpp  pairable_device.h
src/roo_comms/hub/: hub.cpp  hub.h  hub_device.h  hub_device_factory.h
src/roo_comms/hub/devices/: home_automation_device_factory.cpp  home_automation_device_factory.h  hub_device_environmental_sensor.cpp  hub_device_environmental_sensor.h  hub_device_relay.cpp  hub_device_relay.h
src/roo_comms/transport/: esp_now_transport.cpp  esp_now_transport.h  message_queue.h  receiver.cpp  receiver.h
