module(name = "roo_comms", version = "1.1.2")

bazel_dep(name = "roo_testing", version = "1.1.8")
bazel_dep(name = "googletest", version = "1.17.0")

bazel_dep(name = "nanopb", version = "0.4.9.1.bcr.2")

bazel_dep(name = "roo_blink", version = "1.0.2")
bazel_dep(name = "roo_collections", version = "1.3.2")
bazel_dep(name = "roo_control", version = "1.2.2")
bazel_dep(name = "roo_io", version = "2.0.3")
bazel_dep(name = "roo_logging", version = "1.4.3")
bazel_dep(name = "roo_prefs", version = "1.2.3")
bazel_dep(name = "roo_scheduler", version = "2.1.5")
bazel_dep(name = "roo_threads", version = "1.1.6")
bazel_dep(name = "roo_time", version = "1.3.3")
bazel_dep(name = "roo_transceivers", version = "1.1.3")
